--- a/form10.html
+++ b/form10.html
@@ -297,7 +297,7 @@
     </div>
     <div class="text header">Model Use</div>
     <div class="text main type">Please choose (more than one selection is possible):</div>
-    <div class="text main name">If none of the options mentioned above fits, please type in your solution here:</div>
+    <div class="text main name">If none of the options mentioned above fit, please type in your solution here:</div>
     <div class="main-question">What type of models do you use for twinning?</div>
     <div class="footer-title">Helpful Information | External Links</div>
     <div class="info-text">Digital twins utilize various models to accurately replicate physical systems. Geometric models represent the physical shape and structure. Physics-based models simulate physical phenomena based on fundamental principles. Data-driven models rely on historical and real-time data to predict behaviors. Physics-informed machine learning (ML) combines data-driven approaches with physical laws to enhance model accuracy. System models integrate multiple aspects, including mechanical, electrical, and software components, to provide a comprehensive view of the system. These models collectively enable detailed and dynamic simulations for effective monitoring and optimization of physical assets (<a href="https://arxiv.org/pdf/2208.14197" target="_blank"  style="color: white; text-decoration: underline;">Thelen et al., 2022</a>).</div>
