--- a/form2.html
+++ b/form2.html
@@ -297,10 +297,10 @@
     </div>
     <div class="text header">Digital Twin Function</div>
     <div class="text main type">Please choose (more than one selection is possible):</div>
-    <div class="text main name">If none of the options mentioned above fits, please type in your function here:</div>
+    <div class="text main name">If none of the options mentioned above fit, please type in your function here:</div>
     <div class="main-question">What function does your digital twin have?</div>
     <div class="footer-title">Helpful Information | External Links</div>
-    <div class="info-text">Monitoring includes real-time tracking of system parameters and fault detection. Simulation allows for virtual testing and scenario analysis to improve efficiency and reduce risks. Optimization identifies strategies to enhance efficiency using continuous data analysis. Prediction uses data to forecast future states and maintenance needs with machine learning models. Control involves remote management and automated adjustments to optimize performance. Maintenance includes predictive maintenance to prevent failures and plan activities based on condition data (<a href="https://vciba.springeropen.com/articles/10.1186/s42492-023-00137-4" target="_blank"  style="color: white; text-decoration: underline;">Yao et al., 2023</a>).</div>
+    <div class="info-text">Monitoring includes real-time tracking of system parameters and fault detection. Simulation allows for virtual testing and scenario analysis to improve efficiency and reduce risks. Optimization identifies strategies to enhance efficiency using continuous data analysis. Prediction uses data to forecast future states and maintenance needs with machine learning models. Control involves remote management and automated adjustments to optimize performance (<a href="https://vciba.springeropen.com/articles/10.1186/s42492-023-00137-4" target="_blank"  style="color: white; text-decoration: underline;">Yao et al., 2023</a>).</div>
     <div class="main-title">In 10 Steps to Your Digital Twin:<br/>Defining Essential Design Elements</div>
     <img class="logo" src="logo.png" alt="Logo">
     <img class="logo2" src="Logo2.svg" alt="Logo 2">
