--- a/form4.html
+++ b/form4.html
@@ -297,7 +297,7 @@
     </div>
     <div class="text header">Data Transfer Module</div>
     <div class="text main type">Please choose (more than one selection is possible):</div>
-    <div class="text main name">If none of the options mentioned above fits, please type in your solution here:</div>
+    <div class="text main name">If none of the options mentioned above fit, please type in your solution here:</div>
     <div class="main-question">How is the data transferred from the physical object to your data repository?</div>
     <div class="footer-title">Helpful Information | External Links</div>
     <div class="info-text">Various technologies enable data transmission from machines to digital twins. Ethernet provides reliable, fast data transfer for industrial automation and manufacturing. Wi-Fi offers flexible wireless connectivity in production facilities and warehouses. 4G/5G, LTE ensures high bandwidth and low latency for remote monitoring and mobile applications. Industrial IoT gateways connect machines and sensors to the internet, supporting edge computing and data aggregation. Bluetooth handles short-range communication for sensors and wearables. LoRaWAN offers long-range, low-power wireless networks for large facilities and agriculture. Zigbee and Z-Wave are used for short to medium-range communication in home and building automation. These technologies ensure efficient, reliable data transfer tailored to specific needs. A more detailed description can be found in (<a href="https://arxiv.org/pdf/2208.14197" target="_blank"  style="color: white; text-decoration: underline;">Thelen et al., 2022</a>).</div>
